# Tw_stock_crawer

./: .dockerignore  .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  api_example.py  example.py  main.py  mapdict.py  pyproject.toml  requirements.txt  run.sh  run_example.sh  server.py  server.sh  setup.py  taifex_crawler.py  test_client.py  tpex_crawler.py  twse_crawler.py
.github/workflows/: docker-publish.yml
docker/: Dockerfile  build.sh
test/: test_bitcoin_price.py  test_cnyes_news.py  test_company_info.py  test_ctee_news.py  test_currency_price.py  test_faoi.py  test_gold_price.py  test_http.py  test_indices_price.py  test_mgts.py  test_moneyudn_news.py  test_oil_price.py  test_ptt_news.py  test_server.py  test_taifex.py  test_tdcc.py  test_tpex.py  test_twse.py
tw_crawler/: __init__.py  _http.py  bitcoin_price.py  cnyes_news.py  company_info.py  ctee_news.py  cteenews.py  currency_price.py  faoi.py  gold_price.py  indices_price.py  mgts.py  moneyudn_news.py  news.py  oil_price.py  ptt_news.py  taifex.py  tdcc.py  tpex.py  twse.py  yahoonews.py
